<resources>
    <string name="app_name">Career App</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">New? Create Account</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_verify_password">Confirm Password</string>
    <string name="reg_career">Career</string>
    <string-array name="select_career">Select Career</string-array>
    <string name="reg_extras">Additional Skills</string>
    <string name="reg_phone">Phone Number</string>
    <string name="button_register">Register</string>
    <string name="button_home">Home</string>
    <string name="reg_name">Name</string>
    <string name="forget_email">Email</string>
    <string name="button_reset">Reset Password</string>
    <string name="home_title">Careers App</string>
    <string name="home_message">Welcome to the Careers App. Ready to dive in?</string>
    <string name="home_search_inst">The search button will show you a list of professionals that are ready to be hired.</string>
    <string name="home_account_info">The profile button will allow you to manage your profile and more.</string>
    <string name="update_profile">Update Profile</string>
    <string name="final_delete_profile">DELETE</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="log_out">Log Out</string>
    <string name="delete_profile_text">We will miss you! :(</string>
</resources>