<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageProfile">


    <ImageButton
        android:id="@+id/careersSearch"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#3F51B5"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/careersSearch"
        app:srcCompat="@drawable/ic_account" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/careersSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_marginTop="71dp"
        android:backgroundTint="@color/green"
        android:text="@string/update_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_profile"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_out_profile"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="@color/gray"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>