<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageButton
        android:id="@+id/careersSearch"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#3F51B5"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/careersSearch"
        app:srcCompat="@drawable/ic_account" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/careersSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/homeAccountInst"
        android:layout_width="271dp"
        android:layout_height="78dp"
        android:layout_marginTop="408dp"
        android:text="@string/home_account_info"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeMessage"
        android:layout_width="268dp"
        android:layout_height="92dp"
        android:layout_marginTop="188dp"
        android:text="@string/home_message"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeSearchInst"
        android:layout_width="268dp"
        android:layout_height="90dp"
        android:layout_marginTop="304dp"
        android:text="@string/home_search_inst"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="162dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_img" />

</androidx.constraintlayout.widget.ConstraintLayout>